# CaloSoftWare

./: .gitignore  CMakeLists.txt  README  getAndSourceEigen.sh  getEigen
cmake/: CaloSoftWareConfig.cmake.in  CaloSoftWareConfigVersion.cmake.in
source/: CMakeLists.txt  CMakeLists.txt~
source/include/Algorithm/: AsicKeyFinder.h  CalohitHelper.h  Cluster.h  Cluster3D.h  ClusteringHelper.h  Density.h  Distance.h  Efficiency.h  FSRFinder.h  Hough.h  InteractionFinder.h  LinearFit3D.h  ManipMap.h  PCA.h  ShowerAnalyser.h  Tracking.h
source/include/CaloObject/: Asic.h  Asic2.h  CaloCluster.h  CaloGeom.h  CaloHit.h  CaloLayer.h  CaloTrack.h  Layer.h  Pad.h  Shower.h
source/src/Algorithm/: AsicKeyFinder.cc  Cluster.cc  Cluster.cc-e-e  Cluster3D.cc  Clustering.cc  Density.cc  Efficiency.cc  Efficiency.cc-e-e  FSRFinder.cc  Hough.cc  Hough.cc-e-e  InteractionFinder.cc  InteractionFinder.cc-e-e  LinearFit3D.cc  PCA.cc  PCA.cc-e-e  ShowerAnalyser.cc  ShowerAnalyser.cc-e-e  ShowerAnalyser.cc~-e  Tracking.cc  Tracking.cc-e-e
source/src/CaloObject/: Asic.cc  Asic.cc-e  Asic2.cc  CaloCluster.cc  CaloCluster.cc-e  CaloCluster.cc-e-e  CaloHit.cc  CaloHit.cc-e-e  CaloLayer.cc  CaloLayer.cc-e  CaloTrack.cc  CaloTrack.cc-e  Layer.cc  Pad.cc  Shower.cc  Shower.cc-e
